--- a/ae/ae-02-mlr.qmd
+++ b/ae/ae-02-mlr.qmd
@@ -8,9 +8,7 @@ editor: visual
 ::: callout-important
 Go to the [course GitHub organization](https://github.com/sta221-fa24) and locate your `ae-02` repo to get started.
 
-Render, commit, and push your responses to GitHub by the end of class to submit your AE.\
-\
-**This AE will not count towards your participation grade.**
+Render, commit, and push your responses to GitHub by the end of class to submit your AE.
 :::
 
 # Packages
