--- a/slides/lab-03.qmd
+++ b/slides/lab-03.qmd
@@ -32,10 +32,6 @@ bibliography: references.bib
 ## Goals
 
 -   Team project
-
-```{=html}
-<!-- -->
-```
 -   Lab 03: Palmer penguins
 
 ## Lab 03: Palmer penguins
@@ -48,25 +44,42 @@ Lab 03 focuses on
 
 Use this week to get started on the lab. We will continue discussing statistical inference in this week's lectures, so **this lab will be due on Thursday, October 3, 2024.**
 
-🔗 [https://sta221-fa24.netlify.app/labs/lab-03](https://sta221-fa24.netlify.app/labs/lab-03In this lab you will use linear regression and statistical inference to draw conclusions about penguins living in Palmer Archipelago in Antarctica. You will also use the data to check conditions about the distribution of the model residuals.  During the lab session, you will also begin developing research questions for your final project.)
+🔗 [https://sta221-fa24.netlify.app/labs/lab-03](https://sta221-fa24.netlify.app/labs/lab-03In%20this%20lab%20you%20will%20use%20linear%20regression%20and%20statistical%20inference%20to%20draw%20conclusions%20about%20penguins%20living%20in%20Palmer%20Archipelago%20in%20Antarctica.%20You%20will%20also%20use%20the%20data%20to%20check%20conditions%20about%20the%20distribution%20of%20the%20model%20residuals.%20During%20the%20lab%20session,%20you%20will%20also%20begin%20developing%20research%20questions%20for%20your%20final%20project.)
 
-## Project
+## Final Team Project {.midi}
 
-**Goal**: Use the methods from STA 221 to analyze data and answer a research question developed by your team.
+**Goal**: Use the methods from STA 221 to analyze data and answer a research question developed by your team
 
-**Milestones**: There are periodic project milestones throughout the semester. \
+**Primary deliverables:**
 
-\[Add milestones\]
+1.  an in-person presentation about the exploratory data analysis and initial modeling
+2.  a written, reproducible final report detailing your analysis
+3.  a GitHub repository containing all work from the project
 
 **Submission**: All work for the project will be submitted in your team's GitHub repo. You will receive feedback via an Issue on GitHub to model a workflow often used in practice.
 
-## Project: Research question
+## Final team project {.midi}
+
+**Milestones**: There are periodic project milestones throughout the semester to help you work towards the final deliverables:
+
+-   Research questions (today's lab)
+-   Project proposal (next week's lab)
+-   Exploratory data analysis draft
+-   Presentation + Presentation comments
+-   Analysis draft + peer review
+-   Round 1 submission (optional)
+-   Written report
+-   Reproducibility + organization
+
+See the [Final Project Instructions](../project.html) for a timeline and details for each milestone.
+
+## Project: Research questions
 
 Today's goals: Develop three potential research questions your team may be interested in exploring.
 
-For each research question: \[include criteria\]
+The goal of this milestone is for you to develop research questions to motivate the research. You do [**not**]{.underline} need to have a data set at this point
 
-The goal of this milestone is for you to develop research questions to motivate the research. You do [**not**]{.underline} need to have a data set at this point.
+See instructions here:
 
 ## Reminder: Team workflow
 
